# llm-toy

./: .gitignore  Cargo.toml  README.md
.github/: copilot-instructions.md
src/: lib.rs  main.rs
