[package]
name = "llm-toy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = "=2.9.7"
url = "=2.4.1"

[lib]
name = "llm_toy"
path = "src/lib.rs"

[[bin]]
name = "llm-toy"
path = "src/main.rs"
