[package]
name = "llm-toy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
native-tls = "0.2"
ndarray = "0.17"
ort = { version = "2.0.0-rc.11", features = ["load-dynamic", "std"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokenizers = "0.19"
ureq = { version = "=2.9.7", default-features = false, features = ["native-tls"] }
url = "=2.4.1"

[features]
ryzen-ai = ["dep:ort"]
cpu = ["dep:ort"]

[lib]
name = "llm_toy"
path = "src/lib.rs"

[[bin]]
name = "llm-toy"
path = "src/main.rs"
